frontend/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap');

body {
    background-color: #1F2421;
    color: #ffffff;
    font-family: "Funnel Display", serif;
    font-size: 16.5pt;
    font-weight: 300;
    line-height: 1.65;
}

* {
  box-sizing: border-box;
}

html, body {
  margin: 0;
  padding: 0;
}

